--- a/po/nb.po
+++ b/po/nb.po
@@ -1,16 +1,16 @@
-# Hebrew translation for ralcalc
-# Copyright (c) 2008 Rosetta Contributors and Canonical Ltd 2008
+# Norwegian Bokmal translation for ralcalc
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the ralcalc package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2008.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ralcalc\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2009-07-17 09:40+0000\n"
-"Last-Translator: Yaron <sh.yaron@gmail.com>\n"
-"Language-Team: Hebrew <he@li.org>\n"
+"PO-Revision-Date: 2009-10-18 12:52+0000\n"
+"Last-Translator: Sigurd Gartmann <sigurdga-launchpad@sigurdga.no>\n"
+"Language-Team: Norwegian Bokmal <nb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,42 +20,42 @@ msgstr ""
 #: ../src/output.c:110
 #, c-format
 msgid " out of memory\n"
-msgstr " חריגה מהזיכרון\n"
+msgstr " tom for minne\n"
 
 #: ../src/output.c:113
 #, c-format
 msgid " bad input to function (internal)\n"
-msgstr " קלט שגוי לפונקציה (פנימי)\n"
+msgstr ""
 
 #: ../src/output.c:115
 #, c-format
 msgid " unknown token\n"
-msgstr " אסימון לא ידוע\n"
+msgstr ""
 
 #: ../src/output.c:118
 #, c-format
 msgid " bad number\n"
-msgstr " מספר שגוי\n"
+msgstr ""
 
 #: ../src/output.c:121
 #, c-format
 msgid " mismatched brackets\n"
-msgstr " סוגריים לא תואמים\n"
+msgstr ""
 
 #: ../src/output.c:124
 #, c-format
 msgid " duplicate number\n"
-msgstr " מספר כפול\n"
+msgstr ""
 
 #: ../src/output.c:127
 #, c-format
 msgid " invalid operator\n"
-msgstr " פעולה שגויה\n"
+msgstr ""
 
 #: ../src/output.c:130
 #, c-format
 msgid " invalid bracket\n"
-msgstr " סוגר שגוי\n"
+msgstr ""
 
 #: ../src/output.c:133
 #, c-format
@@ -65,12 +65,12 @@ msgstr ""
 #: ../src/output.c:135
 #, c-format
 msgid " unknown error (%d)\n"
-msgstr " שגיאה לא ידועה (%d)\n"
+msgstr " ukjent feil (%d)\n"
 
 #: ../src/ralcalc.c:55
 #, c-format
 msgid "ralcalc  version %s (build date: %s)\n"
-msgstr "גירסת ralcalc %s (תאריך הבניה: %s)\n"
+msgstr "ralcalc  versjon %s (byggdato: %s)\n"
 
 #: ../src/ralcalc.c:56
 #, c-format
@@ -79,6 +79,9 @@ msgid ""
 "http://atchoo.org/tools/ralcalc/\n"
 "\n"
 msgstr ""
+"Opphavsrett (C) 2007-2009 Roger Light\n"
+"http://atchoo.org/tools/ralcalc/\n"
+"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
@@ -88,10 +91,6 @@ msgid ""
 "as described in the COPYING file distributed with this program.\n"
 "\n"
 msgstr ""
-"ralcalc ללא כל אחריות כלל.  תוכלו להפיץ את ralcalc בחינם כפי שמתואר בקובץ "
-"COPYING\n"
-"המושק יחד עם תוכנית זו.\n"
-"\n"
 
 #: ../src/ralcalc.c:58
 #, c-format
@@ -99,13 +98,13 @@ msgid ""
 "ralcalc is a simple command line calculator. \n"
 "\n"
 msgstr ""
-"ralcalc הינו מחשבון פשוט לשורת הפקודה. \n"
+"ralcalc er en enkel kommandolinjekalkulator. \n"
 "\n"
 
 #: ../src/ralcalc.c:59
 #, c-format
 msgid "Usage: ralcalc -h   (display this text)\n"
-msgstr "שימוש: ralcalc -h   (הצגת טקסט זה)\n"
+msgstr "Bruk: ralcalc -h   (vis denne teksten)\n"
 
 #: ../src/ralcalc.c:60
 #, c-format
@@ -115,12 +114,12 @@ msgstr ""
 #: ../src/ralcalc.c:61
 #, c-format
 msgid "       ralcalc [-e] [-f input file] [-i] [-q] [-r] <an equation>\n"
-msgstr ""
+msgstr "       ralcalc [-e] [-f inndatafil] [-i] [-q] [-r] <en ligning>\n"
 
 #: ../src/ralcalc.c:62
 #, c-format
 msgid "Options\n"
-msgstr "אפשרויות\n"
+msgstr "Innstillinger\n"
 
 #: ../src/ralcalc.c:63
 #, c-format
@@ -137,17 +136,17 @@ msgstr ""
 #: ../src/ralcalc.c:65
 #, c-format
 msgid " -i    Process a list of calculations from stdin.\n"
-msgstr ""
+msgstr " -i Prosesser en liste av kalkulasjoner fra stdin.\n"
 
 #: ../src/ralcalc.c:66
 #, c-format
 msgid " -q    Only display the answer (quiet).\n"
-msgstr ""
+msgstr " -q    Vis kun svaret (stille).\n"
 
 #: ../src/ralcalc.c:67
 #, c-format
 msgid " -r    Display the answer with neither SI prefixes nor exponents.\n"
-msgstr " -r    הצג את התשובה בלי קידומות SI או מעריכחפ.\n"
+msgstr ""
 
 #: ../src/ralcalc.c:68
 #, c-format
@@ -156,12 +155,12 @@ msgid ""
 "See http://atchoo.org/tools/ralcalc/ for updates.\n"
 msgstr ""
 "\n"
-"בקרו באתר http://atchoo.org/tools/ralcalc/ לעדכונים.\n"
+"Se http://atchoo.org/tools/ralcalc/ for oppdateringer.\n"
 
 #: ../src/ralcalc.c:79
 #, c-format
 msgid "Numbers:\n"
-msgstr ""
+msgstr "Tall:\n"
 
 #: ../src/ralcalc.c:80
 #, c-format
@@ -181,7 +180,7 @@ msgstr ""
 #: ../src/ralcalc.c:83
 #, c-format
 msgid "  _      : previous result\n"
-msgstr ""
+msgstr "  _      : forrige resultat\n"
 
 #: ../src/ralcalc.c:84
 #, c-format
@@ -203,32 +202,32 @@ msgstr ""
 #: ../src/ralcalc.c:87
 #, c-format
 msgid "  +     : addition\n"
-msgstr ""
+msgstr "  +     : addisjon\n"
 
 #: ../src/ralcalc.c:88
 #, c-format
 msgid "  -     : subtraction\n"
-msgstr ""
+msgstr "  -     : subtraksjon\n"
 
 #: ../src/ralcalc.c:89
 #, c-format
 msgid "  * x   : multiplication\n"
-msgstr ""
+msgstr "  * x   : multiplikasjon\n"
 
 #: ../src/ralcalc.c:90
 #, c-format
 msgid "  /     : division\n"
-msgstr ""
+msgstr "  /     : divisjon\n"
 
 #: ../src/ralcalc.c:91
 #, c-format
 msgid "  %%     : modulus\n"
-msgstr ""
+msgstr "  %%     : modulo\n"
 
 #: ../src/ralcalc.c:92
 #, c-format
 msgid "  ^     : power\n"
-msgstr ""
+msgstr "  ^     : potens\n"
 
 #: ../src/ralcalc.c:93
 #, c-format
@@ -241,6 +240,8 @@ msgid ""
 "\n"
 "Functions:\n"
 msgstr ""
+"\n"
+"Funksjoner:\n"
 
 #: ../src/ralcalc.c:95
 #, c-format
@@ -307,19 +308,4 @@ msgstr ""
 #: ../src/tokens.c:255
 #, c-format
 msgid "Unknown token (%d)\n"
-msgstr "אסימון לא ידוע (%d)\n"
-
-#~ msgid ""
-#~ "       ralcalc [-q] [-e] [-r] <an equation>\n"
-#~ "\n"
-#~ msgstr ""
-#~ "       ralcalc [-q] [-e] [-r] <משוואה>\n"
-#~ "\n"
-
-#~ msgid " -q\t   Only display the answer (quiet).\n"
-#~ msgstr " -q\t   הצג את התשובה בלבד (שקט).\n"
-
-#~ msgid ""
-#~ " -e\t   Use the '1e-3' form of display for the answer rather than SI "
-#~ "prefixes.\n"
-#~ msgstr " -e\t   השתמש בצורה '1e-3' להצגת התשובה מאשר קידומות SI.\n"
+msgstr ""
