--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+1.3.2.1 (20100212)
+==================
+
+- Complete Dutch translations thanks to Yentl.
+- Complete Italian translations thanks to Lorenzo Baracchi.
+- Completed French translations thanks to Michel Boisset.
+- Partial Czech translations thanks to Kuvaly.
+- Partial Frisian translations thanks to Wanda Nauta.
+- Partial Norwegian Bokmal translations thanks to Sigurd Gartmann.
+- Updated Brazilian Portugese translations thanks to Carlos Eduardo Moreira
+  dos Santos.
+- Updated Spanish translations thanks to Federico Vera and Paco Molinero.
+
+
 1.3.2 (20090623)
 ================
 
