--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2009-01-27 11:39+0000\n"
-"Last-Translator: Jen Ockwell <jenfraggleubuntu@googlemail.com>\n"
+"PO-Revision-Date: 2009-10-10 19:14+0000\n"
+"Last-Translator: Roger Light <roger@atchoo.org>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-06-01 21:20+0000\n"
+"X-Launchpad-Export-Date: 2010-02-12 09:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:110
@@ -71,6 +71,17 @@ msgstr " unknown error (%d)\n"
 #, c-format
 msgid "ralcalc  version %s (build date: %s)\n"
 msgstr "ralcalc  version %s (build date: %s)\n"
+
+#: ../src/ralcalc.c:56
+#, c-format
+msgid ""
+"Copyright (C) 2007-2009 Roger Light\n"
+"http://atchoo.org/tools/ralcalc/\n"
+"\n"
+msgstr ""
+"Copyright (C) 2007-2009 Roger Light\n"
+"http://atchoo.org/tools/ralcalc/\n"
+"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
@@ -308,11 +319,3 @@ msgstr "Error: Unable to open file \"%s\"\n"
 #, c-format
 msgid "Unknown token (%d)\n"
 msgstr "Unknown token (%d)\n"
-
-#: ../src/ralcalc.c:56
-#, c-format
-msgid ""
-"Copyright (C) 2007-2009 Roger Light\n"
-"http://atchoo.org/tools/ralcalc/\n"
-"\n"
-msgstr ""
