--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2009-01-09 04:55+0000\n"
-"Last-Translator: pp/bs <Unknown>\n"
+"PO-Revision-Date: 2009-10-22 19:31+0000\n"
+"Last-Translator: Mexit <Unknown>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-06-01 21:20+0000\n"
+"X-Launchpad-Export-Date: 2010-02-12 09:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:110
@@ -79,6 +79,9 @@ msgid ""
 "http://atchoo.org/tools/ralcalc/\n"
 "\n"
 msgstr ""
+"Copyright (C) 2007-2009 Roger Light\n"
+"http://atchoo.org/tools/ralcalc/\n"
+"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
