--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 ==================
 
 - Turkish translations thanks to Angel Spy.
+- Updated Czech translations thanks to Kuvaly [LCT].
+- Updated Basque translations thanks to Mikel Haranburu.
+
 
 1.3.2.1 (20100212)
 ==================
