--- a/po/eu.po
+++ b/po/eu.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2008-11-19 19:48+0000\n"
-"Last-Translator: Mikel Alzibar <mikelalzibar@gmail.com>\n"
+"PO-Revision-Date: 2010-10-25 08:15+0000\n"
+"Last-Translator: Mikel Haranburu <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-02-12 09:12+0000\n"
+"X-Launchpad-Export-Date: 2010-10-26 04:51+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:110
@@ -79,6 +79,9 @@ msgid ""
 "http://atchoo.org/tools/ralcalc/\n"
 "\n"
 msgstr ""
+"Copyright (C) 2007-2009 Roger Light\n"
+"http://atchoo.org/tools/ralcalc/\n"
+"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
@@ -304,7 +307,7 @@ msgstr "Errorea: Memoriatik kanpo\n"
 #: ../src/ralcalc.c:319 ../src/ralcalc.c:342
 #, c-format
 msgid "Error: Invalid SI prefix '%s' for '-s' option.\n"
-msgstr ""
+msgstr "Errorea:  SI aurrizkia baliogabea '%s'  '-s' aukerarako.\n"
 
 #: ../src/ralcalc.c:371
 #, c-format
