--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Turkish translations thanks to Angel Spy.
 - Updated Czech translations thanks to Kuvaly [LCT].
 - Updated Basque translations thanks to Mikel Haranburu.
+- Updated Hebrew translations.
 
 
 1.3.2.1 (20100212)
