--- a/po/he.po
+++ b/po/he.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2009-07-17 09:40+0000\n"
+"PO-Revision-Date: 2010-07-19 16:06+0000\n"
 "Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-02-12 09:12+0000\n"
+"X-Launchpad-Export-Date: 2010-10-25 04:50+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:110
@@ -60,7 +60,7 @@ msgstr " סוגר שגוי\n"
 #: ../src/output.c:133
 #, c-format
 msgid " unable to open file\n"
-msgstr ""
+msgstr " לא ניתן לפתוח את הקובץ\n"
 
 #: ../src/output.c:135
 #, c-format
@@ -79,6 +79,9 @@ msgid ""
 "http://atchoo.org/tools/ralcalc/\n"
 "\n"
 msgstr ""
+"כל הזכויות שמורות (C)‏ 2009-2007 רוג'ר לייט\n"
+"http://atchoo.org/tools/ralcalc/\n"
+"\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
@@ -161,7 +164,7 @@ msgstr ""
 #: ../src/ralcalc.c:79
 #, c-format
 msgid "Numbers:\n"
-msgstr ""
+msgstr "מספרים:\n"
 
 #: ../src/ralcalc.c:80
 #, c-format
@@ -308,18 +311,3 @@ msgstr ""
 #, c-format
 msgid "Unknown token (%d)\n"
 msgstr "אסימון לא ידוע (%d)\n"
-
-#~ msgid ""
-#~ "       ralcalc [-q] [-e] [-r] <an equation>\n"
-#~ "\n"
-#~ msgstr ""
-#~ "       ralcalc [-q] [-e] [-r] <משוואה>\n"
-#~ "\n"
-
-#~ msgid " -q\t   Only display the answer (quiet).\n"
-#~ msgstr " -q\t   הצג את התשובה בלבד (שקט).\n"
-
-#~ msgid ""
-#~ " -e\t   Use the '1e-3' form of display for the answer rather than SI "
-#~ "prefixes.\n"
-#~ msgstr " -e\t   השתמש בצורה '1e-3' להצגת התשובה מאשר קידומות SI.\n"
