--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Updated Czech translations thanks to Kuvaly [LCT].
 - Updated Basque translations thanks to Mikel Haranburu.
 - Updated Hebrew translations.
+- Occitan translations thanks to Cédric Valmary.
 
 
 1.3.2.1 (20100212)
