--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 1.3.2.2 ()
 ==================
 
-- Turkish translations thanks to Angel Spy.
+- Turkish translations thanks to Angel Spy and Devrim Şahin.
 - Updated Czech translations thanks to Kuvaly [LCT].
 - Updated Basque translations thanks to Mikel Haranburu.
 - Updated Hebrew translations.
