Add Vietnamese translations.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 - Updated Basque translations thanks to Mikel Haranburu.
 - Updated Hebrew translations.
 - Occitan translations thanks to Cédric Valmary.
+- Vietnamese translations thanks to Nguyen Quang Chien.
 
 
 1.3.2.1 (20100212)
