--- a/po/he.po
+++ b/po/he.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-07 22:44+0000\n"
-"PO-Revision-Date: 2010-07-19 16:06+0000\n"
+"PO-Revision-Date: 2010-05-21 11:40+0000\n"
 "Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-10-25 04:50+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2011-08-25 13:36+0000\n"
+"X-Generator: Launchpad (build 13779)\n"
 
 #: ../src/output.c:110
 #, c-format
