--- a/po/ralcalc.pot
+++ b/po/ralcalc.pot
@@ -10,8 +10,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-12-15 18:21+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2011-08-25 13:36+0000\n"
+"X-Generator: Launchpad (build 13779)\n"
 
 #: ../src/output.c:110
 #, c-format
