--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-ralcalc (1.3.1-0ubuntu1) jaunty; urgency=low
+ralcalc (1.4.1-0~ppa1) lucid; urgency=low
 
-  * Initial release (LP #314236)
+  * New release.
 
- -- Roger Light <roger@atchoo.org>  Sat, 15 Nov 2008 23:53:49 +0000
+ -- Roger A. Light <roger@atchoo.org>  Fri, 2 Mar 2012 22:00:49 +0000
 
