--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1.5 (2013xxxx)
+==============
+
+- Fix "-i" mode, which was previously being ignored completely.
+
 1.4.2 (20111003)
 ================
 
